Updated Games and Education, Created Arts Page
Added the game Nail Down and fixed Education page layout
Created Arts page to be worked on

--- a/Pages/Games.cshtml
+++ b/Pages/Games.cshtml
@@ -30,7 +30,7 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/qbertc1.png" alt="Qbert Menu and Level 1" title="QBert By Daniel Boldrin" style="border-radius: 5%; max-width: 350px;">
+            <img src="~/Images/qbertc1.png" alt="Qbert Menu and Level 1" title="QBert Menu and Level 1" style="border-radius: 5%; max-width: 350px;">
             <br />
             <br />
             <span>Itch.io page</span>
@@ -55,6 +55,10 @@
             <a href="https://github.com/" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/github.png" alt="Github" title="github.com">
                 <p class="alt">Github</p>
+            </a>
+            <a href="https://www.audacityteam.org/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/audacity.png" alt="Audacity" title="audacityteam.org">
+                <p class="alt">Audacity</p>
             </a>
         </div>
 
@@ -88,7 +92,7 @@
         <br />
         <h1 class="intro__hello pop-wrap">
             Colorise - Game Jam Submission
-            <img class="popup" src="~/Images/colorisec2.png" alt="Syste, Analysis and Development Diploma" style="border-radius: 5%; max-height: 500px;">
+            <img class="popup" src="~/Images/colorisec2.png" alt="ColoRise Screenshots2" style="border-radius: 5%; max-height: 500px;">
         </h1>
         <br />
         <br />
@@ -126,6 +130,86 @@
                 <img src="~/Images/BW/github.png" alt="Github" title="github.com">
                 <p class="alt">Github</p>
             </a>
+            <a href="https://www.audacityteam.org/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/audacity.png" alt="Audacity" title="audacityteam.org">
+                <p class="alt">Audacity</p>
+            </a>
+        </div>
+
+        <h2 class="intro__tagline" style="text-align: center;">
+            As a personal Game Jam project, I created the game ColoRise, a colorful medium-fast paced game where your objective is to reach the top of the tower.
+            <br />
+            <br />
+            The rules are:
+            <br />
+            <br />
+            You can't touch platforms that are the same color as you.
+            <br />
+            <br />
+            Every time you jump of a platform your player's color changes to the same as the platform.
+            <br />
+            <br />
+            If you hit your head under a platform, your streak resets.
+            <br />
+            <br />
+            There are 4 levels with increasing difficulty and rotating platforms with different speeds and directions.
+        </h2>
+    </div>
+    <br />
+</header>
+<div style="clear:both; border-bottom: 1px solid black; width: 100%; height: 10px;"></div>
+<header class="intro">
+    <!-- NailDown -->
+    <div class="intro__wrap">
+        <br />
+        <h1 class="intro__hello pop-wrap">
+            NailDown - College Project
+            <img class="popup" src="~/Images/naildownc2.png" alt="naildown screenshots 2" style="border-radius: 5%; max-height: 500px;">
+        </h1>
+        <br />
+        <br />
+        <br />
+        <div class="company">
+            <h1 class="intro__hello">NailDown WebGL Player</h1>
+            <a href="https://soueuroya.github.io/Nail_Down_Build/" target="_blank"><span>soueuroya.github.io/Nail_Down_Build</span></a>
+            <br />
+            <br />
+            <br />
+            <img src="~/Images/naildownc1.png" alt="NailDown screenshots 1" title="NailDown screenshots 1" style="border-radius: 5%; max-width: 350px;">
+            <br />
+            <br />
+            <span>Itch.io page</span>
+            <br />
+            <a href="https://danielboldrin.itch.io/nail-down" target="_blank">danielboldrin.itch.io/nail-down</a>
+            <br />
+            <br />
+            <span>Technologies Used</span>
+            <br />
+            <br />
+            <a href="https://unity.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/unity.png" alt="Unity3D" title="unity.com">
+                <p class="alt">Unity3D</p>
+            </a>
+            <a href="https://docs.microsoft.com/en-us/dotnet/csharp/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/csharp.png" alt="C#" title="docs.microsoft.com/en-us/dotnet/csharp">
+                <p class="alt">C#</p>
+            </a>
+            <a href="https://visualstudio.microsoft.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/visualstudio.png" alt="Visual Studio" title="visualstudio.microsoft.com">
+                <p class="alt">Visual Studio</p>
+            </a>
+            <a href="https://github.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/github.png" alt="Github" title="github.com">
+                <p class="alt">Github</p>
+            </a>
+            <a href="https://www.mixamo.com" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/mixamo.png" alt="Mixamo" title="mixamo.com">
+                <p class="alt">Mixamo</p>
+            </a>
+            <a href="https://www.audacityteam.org/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/audacity.png" alt="Audacity" title="audacityteam.org">
+                <p class="alt">Audacity</p>
+            </a>
         </div>
 
         <h2 class="intro__tagline" style="text-align: center;">
@@ -153,7 +237,7 @@
 <style>
     .intro__tagline {
         text-align: left !important;
-        font-size: 15px !important;
+        font-size: 20px !important;
         line-height: 22px !important;
     }
 
@@ -172,13 +256,13 @@
     }
 
     .menu-games {
-        background-color: #E3EFFF;
+        background-color: #b0c4de;
         width: 150px;
         text-align: center;
     }
 
     .body-back-color {
-        background-color: #E3EFFF;
+        background-color: #b0c4de;
     }
 
     .intro__contact .highlight-link {
