--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -31,10 +31,10 @@
             <br />
             <h2>Resume</h2>
             <div style="clear:both; width: 100%;"></div>
-            <a href="~/Documents/CV.docx" target="_blank" class="alt-wrap">
+            <a href="~/Documents/Daniel_Boldrin_CV.docx" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/word.png" alt="Word Document" style="border-radius: 25%; max-width: 60px; max-height: 60px; text-align: center;">
             </a>
-            <a href="~/Documents/CV.pdf" target="_blank" class="alt-wrap">
+            <a href="~/Documents/Daniel_Boldrin_CV.pdf" target="_blank" class="alt-wrap">
                 <img src="~/Images/BW/pdf.png" alt="PDF Document" style="border-radius: 25%; max-width: 60px; max-height: 60px; text-align: center;">
             </a>
         </div>
