--- a/Pages/Education.cshtml
+++ b/Pages/Education.cshtml
@@ -19,7 +19,7 @@
     <div class="intro__wrap">
         <h1 class="intro__hello pop-wrap">
             Game Programming - Advanced Diploma
-            <img class="popup" src="~/Images/gbcdiploma.png" alt="Game Programming Diploma" style="border-radius: 5%; max-height: 500px;">
+            <img class="popup" src="~/Images/gbcdiploma.png" alt="Daniel Boldrin Game Programming Diploma" title="Daniel Boldrin Game Programming Diploma" style="border-radius: 5%; max-height: 500px;">
         </h1>
         <br />
         <br />
@@ -30,7 +30,10 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/georgebrown.png" alt="George Brown Logo" title="George Brown College" style="border-radius: 5%; max-width: 250px; max-height: 250px;">
+            <h1 class="intro__hello pop-wrap">
+                <img src="~/Images/georgebrown.png" alt="George Brown College Logo" title="George Brown College Logo" style="border-radius: 5%; max-width: 250px; max-height: 250px;">
+                <img class="popup" src="~/Images/gbcdiploma.png" alt="Daniel Boldrin Game Programming Diploma" title="Daniel Boldrin Game Programming Diploma" style="border-radius: 5%; max-height: 500px;">
+            </h1>
             <br />
             <br />
             <span>Toronto, ON - Canada</span>
@@ -105,6 +108,8 @@
         </div>
 
         <h2 class="intro__tagline" style="text-align: center;">
+            Graduated with honours.
+            <br />
             Studied computer languages such as C++, C#, and Python.
             <br />
             Studied networking, multiplayer, consoles programming, and mobile programming.
@@ -123,7 +128,7 @@
         <br />
         <h1 class="intro__hello pop-wrap">
             System Analysis and Development - Diploma
-            <img class="popup" src="~/Images/ifspdiploma.png" alt="Syste, Analysis and Development Diploma" style="border-radius: 5%; max-height: 500px;">
+            <img class="popup" src="~/Images/ifspdiploma.png" alt="Daniel System Analysis and Development Diploma" title="Daniel System Analysis and Development Diploma" style="border-radius: 5%; max-height: 500px;">
         </h1>
         <br />
         <br />
@@ -134,7 +139,10 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/ifsp.png" alt="IFSP Logo" title="Federal Institute of São Paulo" style="border-radius: 5%; max-width: 250px; max-height: 250px;">
+            <h1 class="intro__hello pop-wrap">
+                <img src="~/Images/ifsp.png" alt="Federal Institute of São Paulo Logo" title="Federal Institute of São Paulo Logo" style="border-radius: 5%; max-width: 250px; max-height: 250px;">
+                <img class="popup" src="~/Images/ifspdiploma.png" alt="Daniel System Analysis and Development Diploma" title="Daniel System Analysis and Development Diploma" style="border-radius: 5%; max-height: 500px;">
+            </h1>
             <br />
             <br />
             <span>Araraquara, SP - Brazil</span>
@@ -237,7 +245,7 @@
         <br />
         <h1 class="intro__hello pop-wrap">
             Web Accessibility - Undergraduate Research
-            <img class="popup" src="~/Images/IC.png" alt="Undergraduate Research Certification" style="border-radius: 5%; max-height: 500px;">
+            <img class="popup" src="~/Images/IC.png" alt="Undergraduate Research Certification" title="Undergraduate Research Certification" style="border-radius: 5%; max-height: 500px;">
         </h1>
         <br />
         <br />
@@ -248,7 +256,10 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/ifsp.png" alt="IFSP Logo" title="Federal Institute of São Paulo" style="border-radius: 5%; max-width: 250px; max-height: 250px;">
+            <h1 class="intro__hello pop-wrap">
+                <img src="~/Images/ifsp.png" alt="Federal Institute of São Paulo Logo" title="Federal Institute of São Paulo Logo" style="border-radius: 5%; max-width: 250px; max-height: 250px;">
+                <img class="popup" src="~/Images/IC.png" alt="Undergraduate Research Certification" title="Undergraduate Research Certification" style="border-radius: 5%; max-height: 500px;">
+            </h1>
             <br />
             <br />
             <span class="pop-wrap">
@@ -291,7 +302,7 @@
         <br />
         <h1 class="intro__hello pop-wrap">
             Biz Game Development - Presenter
-            <img class="popup" src="~/Images/bizgames.png" alt="Biz Games Certification" style="border-radius: 5%; max-height: 500px;">
+            <img class="popup" src="~/Images/bizgames.png" alt="Biz Games Certification" title="Biz Games Certification" style="border-radius: 5%; max-height: 500px;">
         </h1>
         <br />
         <br />
@@ -301,7 +312,10 @@
             <a href="https://www.jnmoura.com.br/pt-br/" target="_blank"><span>jnmoura.com.br/pt-br</span></a>
             <br />
             <br />
-            <img src="~/Images/moura.png" alt="JN Moura Logo" style="border-radius: 5%; max-width: 200px; max-height: 200px;">
+            <h1 class="intro__hello pop-wrap">
+                <img src="~/Images/moura.png" alt="JN Moura Logo" title="JN Moura Logo" style="border-radius: 5%; max-width: 200px; max-height: 200px;">
+                <img class="popup" src="~/Images/bizgames.png" alt="Biz Games Certification" title="Biz Games Certification" style="border-radius: 5%; max-height: 500px;">
+            </h1>
             <br />
             <span>Araraquara, SP - Brazil</span>
             <br />
@@ -329,7 +343,7 @@
         <br />
         <h1 class="intro__hello pop-wrap">
             Standards of Business Conduct - Certification
-            <img class="popup" src="~/Images/HPCERT.png" alt="HP Certification" style="border-radius: 5%; max-height: 500px;">
+            <img class="popup" src="~/Images/HPCERT.png" alt="SBC - HP Certification" title="SBC - HP Certification" style="border-radius: 5%; max-height: 500px;">
         </h1>
         <br />
         <br />
@@ -339,7 +353,10 @@
             <a href="https://www.hpe.com/us/en/home.html" target="_blank"><span>hp.com</span></a>
             <br />
             <br />
-            <img src="~/Images/hp.jpg" alt="Hewlett Packard Logo" style="border-radius: 5%; max-width: 200px; max-height: 200px;">
+            <h1 class="intro__hello pop-wrap">
+                <img src="~/Images/hp.jpg" alt="Hewlett Packard Logo" style="border-radius: 5%; max-width: 200px; max-height: 200px;">
+                <img class="popup" src="~/Images/HPCERT.png" alt="SBC - HP Certification" title="SBC - HP Certification" style="border-radius: 5%; max-height: 500px;">
+            </h1>
             <br />
             <br />
             <span>Araraquara, SP - Brazil</span>
@@ -363,10 +380,10 @@
             <a href="https://www.handeyesociety.com/" target="_blank"><span>handeyesociety.com</span></a>
             <br />
             <br />
-            <img src="~/Images/handeyesociety.png" alt="Hand Eye Society" style="border-radius: 5%; max-width: 200px; max-height: 200px;">
+            <img src="~/Images/handeyesociety.png" alt="Hand Eye Society Logo" title="Hand Eye Society Logo" style="border-radius: 5%; max-width: 200px; max-height: 200px;">
             <br />
             <br />
-            <span>Toronto, ON - Brazil</span>
+            <span>Toronto, ON - Canada</span>
             <br />
             <span>Volunteered in August 2018</span>
         </div>
