--- a/Pages/Experience.cshtml
+++ b/Pages/Experience.cshtml
@@ -29,7 +29,7 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/halton.png" alt="Halton STEM Club Logo" title="Halton STEM Club" style="border-radius: 5%; max-width: 250px !important; max-height: 250px !important;">
+            <img src="~/Images/halton.png" alt="Halton STEM Club Logo" title="Halton STEM Club Logo" style="border-radius: 5%; max-width: 250px !important; max-height: 250px !important;">
             <br />
             <br />
             <span>Burlington, ON - Canada</span>
@@ -98,7 +98,7 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/wells.jpg" alt="Wells Academy Logo" style="border-radius: 5%; max-width: 200px !important; max-height: 250px !important; ">
+            <img src="~/Images/wells.jpg" alt="Wells Academy Logo" title="Wells Academy Logo" style="border-radius: 5%; max-width: 200px !important; max-height: 250px !important; ">
             <br />
             <br />
             <span>Markham, ON - Canada</span>
@@ -200,7 +200,7 @@
             <a href="http://www.thinnox.com/" target="_blank"><span>thinnox.com</span></a>
             <br />
             <br />
-            <img src="~/Images/thinnox.jpg" alt="Thinnox Logo" style="border-radius: 5%; max-width: 220px; max-height: 250px;">
+            <img src="~/Images/thinnox.jpg" alt="Thinnox Logo" title="Thinnox Logo" style="border-radius: 5%; max-width: 220px; max-height: 250px;">
             <br />
             <span>Mississauga, ON - Canada</span>
             <br />
@@ -316,7 +316,7 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/rp4k.png" alt="RP4K Logo" style="border-radius: 5%; max-width: 180px; max-height: 250px;">
+            <img src="~/Images/rp4k.png" alt="RP4K Logo" title="RP4K Logo" style="border-radius: 5%; max-width: 180px; max-height: 250px;">
             <br />
             <br />
             <span>Toronto, ON - Canada</span>
@@ -372,7 +372,7 @@
             <a href="https://www.programmers.com.br/" target="_blank"><span>programmers.com.br</span></a>
             <br />
             <br />
-            <img src="~/Images/programmers.png" alt="Programmers Logo" style="border-radius: 5%; max-width: 320px; max-height: 320px;">
+            <img src="~/Images/programmers.png" alt="Programmers Logo" title="Programmers Logo" style="border-radius: 5%; max-width: 320px; max-height: 320px;">
             <br />
             <span>Matão, SP - Brazil</span>
             <br />
@@ -474,7 +474,7 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/grx.jpg" alt="GRX Soluções Logo" style="border-radius: 5%; max-width: 180px; max-height: 250px;">
+            <img src="~/Images/grx.jpg" alt="GRX Soluções Logo" title="GRX Soluções Logo" style="border-radius: 5%; max-width: 180px; max-height: 250px;">
             <br />
             <span>Araraquara, SP - Brazil</span>
             <br />
@@ -582,7 +582,7 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/hp.jpg" alt="Hewlett Packard Logo" style="border-radius: 5%; max-width: 200px; max-height: 250px;">
+            <img src="~/Images/hp.jpg" alt="Hewlett Packard Logo" title="Hewlett Packard Logo" style="border-radius: 5%; max-width: 200px; max-height: 250px;">
             <br />
             <br />
             <span>Araraquara, SP - Brazil</span>
@@ -664,7 +664,7 @@
             <h1 class="intro__hello">Cast Group</h1>
             <a href="https://www.castgroup.com.br/pt/" target="_blank" style="position: relative; z-index: 100;"><span>castgroup.com.br</span></a>
             <br />
-            <img src="~/Images/cast.jpg" alt="Cast Group Logo" style="position: relative; z-index: 0; border-radius: 5%; max-width: 350px; max-height: 350px; margin-bottom: -50px; margin-top: -30px;">
+            <img src="~/Images/cast.jpg" alt="Cast Group Logo" title="Cast Group Logo" style="position: relative; z-index: 0; border-radius: 5%; max-width: 350px; max-height: 350px; margin-bottom: -50px; margin-top: -30px;">
             <br />
             <span style="position: relative; z-index: 100;">Araraquara, SP - Brazil</span>
             <br />
@@ -748,7 +748,7 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/lider.png" alt="Lider Telecom Logo" style="border-radius: 5%; max-width: 320px; max-height: 320px;">
+            <img src="~/Images/lider.png" alt="Lider Telecom Logo" title="Lider Telecom Logo" style="border-radius: 5%; max-width: 320px; max-height: 320px;">
             <br />
             <br />
             <span>Araraquara, SP - Brazil</span>
