--- a/Pages/Games.cshtml
+++ b/Pages/Games.cshtml
@@ -30,7 +30,10 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/qbertc1.png" alt="Qbert Menu and Level 1" title="QBert Menu and Level 1" style="border-radius: 5%; max-width: 350px;">
+            <h1 class="intro__hello pop-wrap">
+                <img src="~/Images/qbertc1.png" alt="Qbert Menu and Level 1" title="QBert Menu and Level 1" style="border-radius: 5%; max-width: 350px;">
+                <img class="popup" src="~/Images/qbertc2.png" alt="QBERT Different Levels" style="border-radius: 5%; max-height: 500px;">
+            </h1>
             <br />
             <br />
             <span>Itch.io page</span>
@@ -84,6 +87,7 @@
             Also, to make sure the objects stay perfectly aligned, they are recentered after colliding with the ground.
         </h2>
     </div>
+    <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%; height: 10px;"></div>
 <header class="intro">
@@ -103,7 +107,10 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/colorisec1.png" alt="ColoRise Intro" title="ColoRise Intro" style="border-radius: 5%; max-width: 350px;">
+            <h1 class="intro__hello pop-wrap">
+                <img src="~/Images/colorisec1.png" alt="ColoRise Intro" title="ColoRise Intro" style="border-radius: 5%; max-width: 350px;">
+                <img class="popup" src="~/Images/colorisec2.png" alt="ColoRise Screenshots2" style="border-radius: 5%; max-height: 500px;">
+            </h1>
             <br />
             <br />
             <span>Itch.io page</span>
@@ -153,6 +160,9 @@
             <br />
             <br />
             There are 4 levels with increasing difficulty and rotating platforms with different speeds and directions.
+            <br />
+            <br />
+            This prototype was created in 2 days and right now I am fixing bugs and planning to create a finished version shortly. You can see the updates at the Itch.io game page.
         </h2>
     </div>
     <br />
@@ -175,7 +185,10 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/naildownc1.png" alt="NailDown screenshots 1" title="NailDown screenshots 1" style="border-radius: 5%; max-width: 350px;">
+            <h1 class="intro__hello pop-wrap">
+                <img src="~/Images/naildownc1.png" alt="NailDown screenshots 1" title="NailDown screenshots 1" style="border-radius: 5%; max-width: 350px;">
+                <img class="popup" src="~/Images/naildownc2.png" alt="naildown screenshots 2" style="border-radius: 5%; max-height: 500px;">
+            </h1>
             <br />
             <br />
             <span>Itch.io page</span>
@@ -213,22 +226,16 @@
         </div>
 
         <h2 class="intro__tagline" style="text-align: center;">
-            As a personal Game Jam project, I created the game ColoRise, a colorful medium-fast paced game where your objective is to reach the top of the tower.
+            As a college project, I created the game Nail Down, a puzzle-combat platformer where your objective is to escape the zombie outbreak.
             <br />
             <br />
-            The rules are:
+            You play as Peter, a construction worker with the ability to operate heavy machinery and excel on construction related tasks.
             <br />
             <br />
-            You can't touch platforms that are the same color as you.
+            Although I used free models for this game, I did create a few models myself and edited quite a few.
             <br />
             <br />
-            Every time you jump of a platform your player's color changes to the same as the platform.
-            <br />
-            <br />
-            If you hit your head under a platform, your streak resets.
-            <br />
-            <br />
-            There are 4 levels with increasing difficulty and rotating platforms with different speeds and directions.
+            This project had to be done in a very short period of time but it is my intention to move from the prototype stage to a finished product.
         </h2>
     </div>
     <br />
