--- a/Pages/Games.cshtml
+++ b/Pages/Games.cshtml
@@ -26,7 +26,7 @@
         <br />
         <div class="company">
             <h1 class="intro__hello">Qbert WebGL Player</h1>
-            <a href="https://soueuroya.github.io/QBertWebGL/" target="_blank"><span>soueuroya.github.io/QBertWebGL</span></a>
+            <a href="https://soueuroya.github.io/QBertWebGL/" target="_blank"><span>Play on GitHub: soueuroya.github.io/QBertWebGL</span></a>
             <br />
             <br />
             <br />
@@ -103,9 +103,9 @@
         <br />
         <div class="company">
             <h1 class="intro__hello">ColoRise WebGL Player</h1>
-            <a href="https://soueuroya.github.io/ColoRise/" target="_blank"><span>Play on GitHub soueuroya.github.io/ColoRise</span></a>
+            <a href="https://soueuroya.github.io/ColoRise/" target="_blank"><span>Play on GitHub: soueuroya.github.io/ColoRise</span></a>
             <br />
-            <a href="https://colorise.azurewebsites.net/" target="_blank"><span>Play on Azure colorise.azurewebsites.net</span></a>
+            <a href="https://colorise.azurewebsites.net/" target="_blank"><span>Play on Azure: colorise.azurewebsites.net</span></a>
             <br />
             <br />
             <h1 class="intro__hello pop-wrap">
@@ -182,7 +182,7 @@
         <br />
         <div class="company">
             <h1 class="intro__hello">NailDown WebGL Player</h1>
-            <a href="https://soueuroya.github.io/Nail_Down_Build/" target="_blank"><span>soueuroya.github.io/Nail_Down_Build</span></a>
+            <a href="https://soueuroya.github.io/Nail_Down_Build/" target="_blank"><span>Play on GitHub: soueuroya.github.io/Nail_Down_Build</span></a>
             <br />
             <br />
             <br />
