Updated Game Page
Changed ColoRise GitHub Playable Link

--- a/Pages/Games.cshtml
+++ b/Pages/Games.cshtml
@@ -103,7 +103,7 @@
         <br />
         <div class="company">
             <h1 class="intro__hello">ColoRise WebGL Player</h1>
-            <a href="https://soueuroya.github.io/ColoRise/" target="_blank"><span>Play on GitHub: soueuroya.github.io/ColoRise</span></a>
+            <a href="https://soueuroya.github.io/ColoRiseAzure/" target="_blank"><span>Play on GitHub: soueuroya.github.io/ColoRise</span></a>
             <br />
             <a href="https://colorise.azurewebsites.net/" target="_blank"><span>Play on Azure: colorise.azurewebsites.net</span></a>
             <br />
