--- a/Pages/Experience.cshtml
+++ b/Pages/Experience.cshtml
@@ -18,7 +18,7 @@
     <!-- LUXSONIC -->
     <div class="intro__wrap">
         <h1 class="intro__hello">
-            Game Programming Teacher
+            Unity Software Developer
         </h1>
         <br />
         <br />
@@ -28,6 +28,7 @@
             <a href="https://luxsonic.ca/" target="_blank"><span>luxsonic.ca</span></a>
             <br />
             <img src="~/Images/luxsonic.png" alt="Luxsonic Logo" title="Luxsonic Logo" style="border-radius: 5%; max-width: 250px !important; max-height: 250px !important;">
+            <br />
             <span>Saskatoon, SK - Canada</span>
             <br />
             <span>Remote Work</span>
@@ -90,16 +91,11 @@
         </div>
 
         <h2 class="intro__tagline" style="text-align: center;">
-            Responsible for planning, organizing, and teaching <span class="name">
-                game programming
-            </span> remote classes with
-            <span class="name">Unity3D</span> and <span class="name">C#</span>.
+            Developed 3 different immersive VR software modules to train and assess medical personnel in diverse healthcare simulations, from microbiology lab to cardiac and respiratory emergency procedures.
+            <br />
+            Experience with OpenXR, WaveXR, Oculus and Vive Focus 3
             <br />
             <br />
-            Taught semi-private classes of 2 students.
-            <br />
-            <br />
-            Recognized for teaching and course coordination excellence.
         </h2>
     </div>
     <br />
