Fixed icons and end date

--- a/Pages/Experience.cshtml
+++ b/Pages/Experience.cshtml
@@ -56,7 +56,7 @@
             </a>
             <br />
             <a href="https://www.vive.com/ca/" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/Vive.jpg" alt="Vive" title="vive.com/ca">
+                <img src="~/Images/BW/vive.png" alt="Vive" title="vive.com/ca">
                 <p class="alt">Vive</p>
             </a>
             <a href="https://www.oculus.com/" target="_blank" class="alt-wrap">
@@ -809,7 +809,7 @@
             <br />
             <span>Remote Work</span>
             <br />
-            <span>February 2021 - Present</span>
+            <span>February 2021 - October 2021</span>
             <br />
             <br />
             <span>Technologies Used</span>
