Updated with assets page
Added Match3 and Lockpicking minigames.
Added a few Black and white icons
Updates colorise pngs.
converted a few jpgs into pngs.
Updated resumes.

--- a/Pages/Education.cshtml
+++ b/Pages/Education.cshtml
@@ -25,7 +25,7 @@
         <br />
         <br />
         <div class="company">
-            <h1 class="intro__hello">George Brown College</h1>
+            <h2 class="intro__hello">George Brown College</h2>
             <a href="https://www.georgebrown.ca/" target="_blank"><span>georgebrown.ca</span></a>
             <br />
             <br />
@@ -134,7 +134,7 @@
         <br />
         <br />
         <div class="company">
-            <h1 class="intro__hello">IFSP</h1>
+            <h2 class="intro__hello">IFSP</h2>
             <a href="https://www.arq.ifsp.edu.br/" target="_blank"><span>arq.ifsp.edu.br</span></a>
             <br />
             <br />
@@ -231,7 +231,7 @@
             <br />
             Volunteered for mentorship in Object Oriented Programming, Logic, Analysis and Development, Algorithm, and Data Structure.
             <br />
-            Completeed an undergraduate research in `Web Accessibility`
+            Completed an undergraduate research in `Web Accessibility`
             <br />
             Taught C# and XNA Game Programming classes for grade 12 students.
         </h2>
@@ -251,7 +251,7 @@
         <br />
         <br />
         <div class="company">
-            <h1 class="intro__hello">IFSP</h1>
+            <h2 class="intro__hello">IFSP</h2>
             <a href="https://www.ifsp.edu.br/" target="_blank"><span>ifsp.edu.br</span></a>
             <br />
             <br />
@@ -308,7 +308,7 @@
         <br />
         <br />
         <div class="company">
-            <h1 class="intro__hello">JN Moura</h1>
+            <h2 class="intro__hello">JN Moura</h2>
             <a href="https://www.jnmoura.com.br/pt-br/" target="_blank"><span>jnmoura.com.br/pt-br</span></a>
             <br />
             <br />
@@ -349,12 +349,12 @@
         <br />
         <br />
         <div class="company">
-            <h1 class="intro__hello">Hewlett Packard</h1>
+            <h2 class="intro__hello">Hewlett Packard</h2>
             <a href="https://www.hpe.com/us/en/home.html" target="_blank"><span>hp.com</span></a>
             <br />
             <br />
             <h1 class="intro__hello pop-wrap">
-                <img src="~/Images/hp.jpg" alt="Hewlett Packard Logo" style="border-radius: 5%; max-width: 200px; max-height: 200px;">
+                <img src="~/Images/hp.png" alt="Hewlett Packard Logo" style="border-radius: 5%; max-width: 200px; max-height: 200px;">
                 <img class="popup" src="~/Images/HPCERT.png" alt="SBC - HP Certification" title="SBC - HP Certification" style="border-radius: 5%; max-height: 500px;">
             </h1>
             <br />
