--- a/Pages/Experience.cshtml
+++ b/Pages/Experience.cshtml
@@ -26,9 +26,9 @@
         <div class="company">
             <h1 class="intro__hello">Luxsonic</h1>
             <a href="https://luxsonic.ca/" target="_blank"><span>luxsonic.ca</span></a>
-            <br />
+            <div style="clear:both"></div>
             <img src="~/Images/luxsonic.png" alt="Luxsonic Logo" title="Luxsonic Logo" style="border-radius: 5%; max-width: 250px !important; max-height: 250px !important;">
-            <br />
+            <div style="clear:both"></div>
             <span>Saskatoon, SK - Canada</span>
             <br />
             <span>Remote Work</span>
@@ -47,11 +47,11 @@
                 <p class="alt">C#</p>
             </a>
             <a href="https://wavexr.com/" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/wave.jpg" alt="WaveXR" title="wavexr.com">
+                <img src="~/Images/BW/wave.png" alt="WaveXR" title="wavexr.com">
                 <p class="alt">WaveXR</p>
             </a>
             <a href="https://www.khronos.org/openxr/" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/openxr.jpg" alt="OpenXR" title="khronos.org/openxr">
+                <img src="~/Images/BW/openxr.png" alt="OpenXR" title="khronos.org/openxr">
                 <p class="alt">OpenXR</p>
             </a>
             <br />
@@ -101,6 +101,7 @@
     <br />
 </header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
+<br />
 <header class="intro">
     <!-- HALTON -->
     <div class="intro__wrap">
@@ -161,11 +162,11 @@
             </span> remote classes with
             <span class="name">Unity3D</span> and <span class="name">C#</span>.
             <br />
-            <br />
             Taught semi-private classes of 2 students.
             <br />
-            <br />
             Recognized for teaching and course coordination excellence.
+            <br />
+            <br />
         </h2>
     </div>
     <br />
@@ -184,7 +185,7 @@
             <a href="http://www.thinnox.com/" target="_blank"><span>thinnox.com</span></a>
             <br />
             <br />
-            <img src="~/Images/thinnox.jpg" alt="Thinnox Logo" title="Thinnox Logo" style="border-radius: 5%; max-width: 220px; max-height: 250px;">
+            <img src="~/Images/thinnox.png" alt="Thinnox Logo" title="Thinnox Logo" style="border-radius: 5%; max-width: 220px; max-height: 250px;">
             <br />
             <span>Mississauga, ON - Canada</span>
             <br />
@@ -276,11 +277,11 @@
             <span class="name">programming, 3D animation, modeling, circuits, technical drawing, and game design </span>
             presential and remote classes.
             <br />
-            <br />
             Taught class sizes up to 12 students from grade 8 to 12.
             <br />
-            <br />
             Recognized for excellent teaching, corse coordination, and instructional reports to student’s parents.
+            <br />
+            <br />
         </h2>
     </div>
     <br />
@@ -377,11 +378,11 @@
         <h2 class="intro__tagline" style="text-align: center;">
             Led a development team responsible for back and front-end programming of an automated medical survey system used over EUA.
             <br />
-            <br />
             Responsible for database management and software architecture using MVC5.
             <br />
-            <br />
             Survey collected feedback via 30 online questions to be answered by patients after their visit to a clinic.
+            <br />
+            <br />
         </h2>
     </div>
     <br />
@@ -401,7 +402,7 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/hp.jpg" alt="Hewlett Packard Logo" title="Hewlett Packard Logo" style="border-radius: 5%; max-width: 200px; max-height: 250px;">
+            <img src="~/Images/hp.png" alt="Hewlett Packard Logo" title="Hewlett Packard Logo" style="border-radius: 5%; max-width: 200px; max-height: 250px;">
             <br />
             <br />
             <span>Araraquara, SP - Brazil</span>
@@ -483,7 +484,7 @@
             <h1 class="intro__hello">Cast Group</h1>
             <a href="https://www.castgroup.com.br/pt/" target="_blank" style="position: relative; z-index: 100;"><span>castgroup.com.br</span></a>
             <br />
-            <img src="~/Images/cast.jpg" alt="Cast Group Logo" title="Cast Group Logo" style="position: relative; z-index: 0; border-radius: 5%; max-width: 350px; max-height: 350px; margin-bottom: -50px; margin-top: -30px;">
+            <img src="~/Images/cast.png" alt="Cast Group Logo" title="Cast Group Logo" style="position: relative; z-index: 0; border-radius: 5%; max-width: 350px; max-height: 350px; margin-bottom: -50px; margin-top: -30px;">
             <br />
             <span style="position: relative; z-index: 100;">Araraquara, SP - Brazil</span>
             <br />
@@ -608,7 +609,7 @@
             </a>
             <br />
             <a href="https://www.highcharts.com/" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/highcharts.jpg" alt="Highcharts" title="highcharts.com">
+                <img src="~/Images/BW/highcharts.png" alt="Highcharts" title="highcharts.com">
                 <p class="alt">Highcharts</p>
             </a>
             <a href="https://www.microsoft.com/en-us/sql-server/sql-server-2019" target="_blank" class="alt-wrap">
@@ -694,7 +695,7 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/grx.jpg" alt="GRX Soluções Logo" title="GRX Soluções Logo" style="border-radius: 5%; max-width: 180px; max-height: 250px;">
+            <img src="~/Images/grx.png" alt="GRX Soluções Logo" title="GRX Soluções Logo" style="border-radius: 5%; max-width: 180px; max-height: 250px;">
             <br />
             <span>Araraquara, SP - Brazil</span>
             <br />
@@ -735,7 +736,7 @@
                 <p class="alt">Visual Studio</p>
             </a>
             <a href="https://www.highcharts.com/" target="_blank" class="alt-wrap">
-                <img src="~/Images/BW/highcharts.jpg" alt="Highcharts" title="highcharts.com">
+                <img src="~/Images/BW/highcharts.png" alt="Highcharts" title="highcharts.com">
                 <p class="alt">Highcharts</p>
             </a>
             <a href="https://www.microsoft.com/en-us/sql-server/sql-server-2019" target="_blank" class="alt-wrap">
@@ -802,7 +803,7 @@
             <br />
             <br />
             <br />
-            <img src="~/Images/wells.jpg" alt="Wells Academy Logo" title="Wells Academy Logo" style="border-radius: 5%; max-width: 200px !important; max-height: 250px !important; ">
+            <img src="~/Images/wells.png" alt="Wells Academy Logo" title="Wells Academy Logo" style="border-radius: 5%; max-width: 200px !important; max-height: 250px !important; ">
             <br />
             <br />
             <span>Markham, ON - Canada</span>
@@ -880,12 +881,11 @@
             remote classes with
             <span class="name">Unity3D</span> and <span class="name">C#</span>.
             <br />
-            <br />
-            <br />
             Taught semi-private class sizes up to 6 students from grade 6 to 12.
             <br />
-            <br />
             Recognized for teaching and course coordination excellence.
+            <br />
+            <br />
         </h2>
     </div>
     <br />
@@ -941,8 +941,8 @@
             Responsible for teaching game programming classes with
             <span class="name">Visual Basic</span>, <span class="name">Alice2</span>, and <span class="name">Scratch</span>.
             <br />
-            <br />
             Taught class sizes of 6 students from grade 4 to 10.
+            <br />
         </h2>
     </div>
     <br />
