Updated Colorise logo image

--- a/Pages/Games.cshtml
+++ b/Pages/Games.cshtml
@@ -32,7 +32,7 @@
             <br />
             <br />
             <h1 class="intro__hello pop-wrap">
-                <img src="~/Images/colorisec1.png" alt="ColoRise Intro" title="ColoRise Intro" style="border-radius: 5%; max-width: 350px;">
+                <img src="~/Images/colorise.png" alt="ColoRise Intro" title="ColoRise Intro" style="border-radius: 5%; max-width: 350px;">
                 <img class="popup" src="~/Images/colorisec2.png" alt="ColoRise Screenshots2" style="border-radius: 5%; max-height: 500px;">
             </h1>
             <br />
