add extra content

--- a/Pages/Assets.cshtml
+++ b/Pages/Assets.cshtml
@@ -176,6 +176,94 @@
     </div>
     <br />
 </header>
+<div style="clear:both; border-bottom: 1px solid black; width: 100%; height: 10px;"></div>
+<br />
+<header class="intro">
+    <!-- WEBGL MULTIPLAYER TEMPLATE-->
+    <div class="intro__wrap">
+        <h1 class="intro__hello pop-wrap">
+            WebGL Multiplayer Rooms Template
+            <img class="popup" src="~/Images/lockpicking.png" alt="WebGL Multiplayer Rooms Template" style="border-radius: 5%; max-height: 500px;">
+        </h1>
+        <br />
+        <br />
+        <br />
+        <div class="company">
+            <h2 class="intro__hello">Multiplayer WebGL Player</h2>
+            <a href="https://webglmultiplayertemplateserver.herokuapp.com/" target="_blank"><span>On Heroku: webglmultiplayertemplateserver.herokuapp.com/</span></a>
+            <br />
+            <br />
+            <br />
+            <h1 class="intro__hello pop-wrap">
+                <img src="~/Images/lock.png" alt="Lockpicking Minigame" title="Lockpicking Minigame" style="border-radius: 5%; max-width: 350px;">
+                <img class="popup" src="~/Images/lockpicking.png" alt="Multiplayer Rooms Examples" style="border-radius: 5%; max-height: 500px;">
+            </h1>
+            <br />
+            <br />
+            <span>Itch.io page</span>
+            <br />
+            <a href="https://danielboldrin.itch.io/lockpicking-minigame-template" target="_blank">danielboldrin.itch.io/lockpicking-minigame-template</a>
+            <br />
+            <br />
+            <span>Technologies Used</span>
+            <br />
+            <a href="https://unity.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/unity.png" alt="Unity3D" title="unity.com">
+                <p class="alt">Unity3D</p>
+            </a>
+            <a href="https://docs.microsoft.com/en-us/dotnet/csharp/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/csharp.png" alt="C#" title="docs.microsoft.com/en-us/dotnet/csharp">
+                <p class="alt">C#</p>
+            </a>
+            <a href="https://visualstudio.microsoft.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/visualstudio.png" alt="Visual Studio" title="visualstudio.microsoft.com">
+                <p class="alt">Visual Studio</p>
+            </a>
+            <a href="https://github.com/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/github.png" alt="Github" title="github.com">
+                <p class="alt">Github</p>
+            </a>
+            <a href="https://www.audacityteam.org/" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/audacity.png" alt="Audacity" title="audacityteam.org">
+                <p class="alt">Audacity</p>
+            </a>
+            <a href="https://assetstore.unity.com/packages/templates/packs/match-3-colors-game-template-222007" target="_blank" class="alt-wrap">
+                <img src="~/Images/BW/assetstore.png" alt="Unity Asset Store" title="assetstore.unity.com/">
+                <p class="alt">Unity Asset Store</p>
+            </a>
+        </div>
+
+        <h2 class="intro__tagline" style="text-align: center;">
+            As a personal project, I made a small WebGL Multiplayer Rooms Template Package for Unity.
+            <br />
+            <br />
+            With this package you can easily deploy your Unity project online to be played by other players.
+            <br />
+            <br />
+            There is a scene with a multiplayer menu and room creation examples.
+            <br />
+            This package is still under construction and it is being updated constantly.
+            <br />
+            <br />
+            Download extra content for this package, including the Server.js code and WebGLTemplate
+            <br />
+            <br />
+            <a href="~/Documents/WebGLMultiplayerRoomsTemplate_EXTRA_CONTENT.7z" target="_blank">Extra Content.7z</a>
+            <br />
+            <a href="~/Documents/WebGLMultiplayerRoomsTemplate_EXTRA_CONTENT.rar" target="_blank">Extra Content.rar</a>
+            <br />
+            <a href="~/Documents/WebGLMultiplayerRoomsTemplate_EXTRA_CONTENT.zip" target="_blank">Extra Content.zip</a>
+            <br />
+            <br />
+            You can find the Asset Store page here:
+        </h2>
+        <a href="https://assetstore.unity.com/packages/templates/systems/lockpicking-minigame-221217" target="_blank">
+            <img src="~/Images/BW/assetstore.png" alt="Unity Asset Store - Lockpicking Minigame" title="assetstore.unity.com/">
+            assetstore.unity.com/packages/templates/systems/lockpicking-minigame-221217
+        </a>
+    </div>
+    <br />
+</header>
 <div style="clear:both; border-bottom: 1px solid black; width: 100%;"></div>
 <style>
     .intro__tagline {
